[package]
name = "gmt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# goodmorning-services = { path = "../goodmorning-services" }
goodmorning-services = { git = "https://github.com/gmornin/services", rev = "71e05ef" }
actix-web = {version = "4.3", features = ["rustls"]}
rustls = "0.20"
rustls-pemfile = "1"
tokio = {version = "1.26", features = ["fs"]}
serde = { version = "1.0", features = ["derive"] }
actix-files = "0.6"
sudo = "0.6"
simplelog = "0.12"
log = "0.4"
chrono = "0.4"
yew = { version = "0.20", features = ["ssr"] }
once_cell = "1.18"
serde_json = "1.0"
fastrand = "1.9"
hex = "0.4"
html-escape = "0.2"
mime = "0.3"
mongodb = "2.6"
actix-multipart = "0.6.0"
futures-util = "0.3.28"
async-trait = "0.1"
typetag = "0.2"
pulldown-cmark = "0.9"
