[package]
name = "gmt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# goodmorning-services = { path = "../services", features = [ "tex" ] }
goodmorning-services = { git = "https://github.com/gmornin/services", rev = "14f8954" , features = [ "tex" ] }
actix-web = { version = "4.3", default-features = false }
tokio = "1.26"
serde = { version = "1.0", default-features = false }
actix-files = "0.6"
simplelog = { version = "0.12", default-features = false }
log = "0.4"
chrono = { version = "0.4", default-features = false }
yew = { version = "0.21", features = ["ssr"] }
serde_json = { version = "1.0", default-features = false }
fastrand = "2.0"
hex = { version = "0.4", default-features = false }
html-escape = { version = "0.2", default-features = false }
mime = "0.3"
mongodb = "3.1" 
actix-multipart = { version = "0.7", default-features = false }
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1"
typetag = "0.2"
pulldown-cmark = { version = "0.12", features = ["html"], default-features = false}
implicit-clone = "0.4"
shlex = { version = "1.3", default-features = false }
scraper = { version = "0.21", default-features = false }

[profile.release]
strip = true
# lto = true
# opt-level = 3
panic = "abort"
